--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,8 @@
 <app-nav-bar></app-nav-bar>
+<div class="container" style="margin-top: 140px;">Welcome to {{title}}</div>
+<ul>
+  <li class="list-unstyled" *ngFor="let product of products">
+    {{product.name}}
+  </li>
+</ul>
+
