end of section 10

--- a/client/src/app/shared/paging-header/paging-header.component.html
+++ b/client/src/app/shared/paging-header/paging-header.component.html
@@ -1,6 +1,6 @@
 <header>
   <span *ngIf="totalCount && pageNumber && pageSize">Showing
-    <strong>page number{{pageNumber}}-- page size{{pageSize}}--total count{{totalCount}}<br>
+    <strong>
       <!--
         let say if we are on page 3 and max page size is 6 we should see 6*2 past product+1
       -->
