--- a/client/src/app/shop/product-items/product-items.component.html
+++ b/client/src/app/shop/product-items/product-items.component.html
@@ -10,7 +10,8 @@
 
       <div class="btn-group mt-auto">
           <button class="btn btn-outline-secondary fa fa-shopping-cart me-2"></button>
-          <button class="btn btn-outline-secondary">View</button>
+          <button routerLink="/shop/{{product.id}}" routerLinkActive="router-link-active"  class="btn btn-outline-secondary">View</button>
       </div>
   </div>
+
 </div>
