--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,6 +1,6 @@
  <div class="div container">
  <div class="container">
-  <div class="row">
+  <div class="row" *ngIf="types.length>0 && brands.length>0">
       <section class="col-3">
           <h5 class="text-warning ms-3">Sort</h5>
           <select class="form-select mb-4" (change)="onSortSelected($event)">
@@ -49,7 +49,6 @@
 
           <div class="row row-cols-3 g-3 mb-4">
               <div class="col" *ngFor="let product of products">
-                {{product.id}}
                   <app-product-items [product]="product"></app-product-items>
               </div>
           </div>
