--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -6,3 +6,7 @@
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
+
+label.xng-breadcrumb-trail{
+  color:orange;
+}
